# NvCodecCuda

./: .gitignore  CMakeLists.txt  README.md
src/application/: app_yolo.cpp  nvCodecYoloV5.cpp
src/inc/: nvCodecYoloV5.h
test-proj/: CMakeLists.txt  main.cpp
